frontend+viam+lcb: Add format field access predicate and encoding  (#324)